--- a/index.html
+++ b/index.html
@@ -13,8 +13,17 @@
   </head>
   <body>
     <div class="wrapper">
-      <div class="icon"><i class="fa fa-angle-left"></i></div>
+      <div class="icon"><i id="left" class="fa fa-angle-left"></i></div>
       <ui class="tabs-box">
+        <li class="tab">HTML</li>
+        <li class="tab">CSS</li>
+        <li class="tab">BOOTSTRAP</li>
+        <li class="tab">SASS</li>
+        <li class="tab active">JAVASCRIPT</li>
+        <li class="tab">TYPESCRIPT</li>
+        <li class="tab">ANTD</li>
+        <li class="tab">REACTJS</li>
+        <li class="tab">NEXTJS</li>
         <li class="tab">HTML</li>
         <li class="tab">CSS</li>
         <li class="tab">BOOTSTRAP</li>
@@ -25,7 +34,8 @@
         <li class="tab">REACTJS</li>
         <li class="tab">NEXTJS</li>
       </ui>
-      <div class="icon"><i class="fa fa-angle-right"></i></div>
+      <div class="icon"><i id="right" class="fa fa-angle-right"></i></div>
     </div>
   </body>
+  <script src="script.js"></script>
 </html>
